--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,8 +5,19 @@ html {
     height: 100%;
     box-sizing: border-box;
   }
-  
+
   #app {
     height: 100%;
   }
-  
+  .margin-left-8{
+    margin-left:8px;
+  }
+  .margin-left-16{
+    margin-left:16px;
+  }
+  .margin-right-8{
+    margin-right:8px;
+  }
+  .margin-right-16{
+    margin-right: 16px;
+  }
