--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,4 @@
-
+@import '../style//color.scss';
 body{
   height: 100%;
 }
@@ -25,4 +25,7 @@ html {
   }
   .margin-right-16{
     margin-right: 16px;
+  }
+  #app{
+    background:$background
   }
